--- a/src/components/separator.css
+++ b/src/components/separator.css
@@ -1,4 +1,6 @@
 .separator>h2 {
+	padding: 0px 5%;
+	color: #111;
 	text-align: center;
 }
 
